2010-01-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimage.py, base.py: Added photo source icons in Tooltips.
	* base.py, rss.py, rss-16.png: Added RSS icon.

2010-01-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py, base.py, POTFILES.in, ja.po: Implemented F-Spot
	  options tooltip on photo source treeview.
	* preferences.py, gphotoframe.glade: Implemented tooltips for
	  photo source treeview.
	* plugins/*.py: Introduced xdg.IconTheme.getIconPath.  Support for
	  downloading favicons.

2010-01-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.5 release.
	* photoframe.py: Fixed a bug (set_photo should return value in
	  screen saver mode).

2010-01-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoimage.py, photoliststore.py: Added GConf
	  options (aspect_max, aspect_min: aspect = width / height) to
	  disable display of very tall or wide images. (issue #22) 
	* config.py: Added set_float & get_float.
	* photoimage.py: Code refactoring. Added new PhotoImagePixbuf class.
	* menu.py, base.py, flickr.py, fspot.py, picasa.py: Added basic
	  support for source icons.

2010-01-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoimage.py: Fixed a frame position bug (issue #31).
	* COPYING, gphotoframe.glade: Updated copyright years.
	* picasa.py: Removed gdata-python-client dependency.
	* setup.cfg: Enabled gnome-screensaver support (issue #21).

2009-08-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* constants.py: Fixed the glade file directory.

2009-08-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.4.1 release.

2009-08-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Added support for F-Spot 0.6.0 database (issue #28).

2009-08-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* README, COPYING, GPL: Updated the copyright notice (issue #27).

2009-07-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Fixed a tag related bug (issue #25).
	  Fixed a sql statement bug (issue #26).
